<resources>
    <string name="app_name">Event Timepiece</string>
    <string name="about">About</string>
    <string name="welcome_text">Welcome to use event timepiece🎉</string>
    <string name="fab_content_text">FAB edit</string>
    <string name="build_version">Build Version: %s</string>
    <string name="about_dialog_content">See source at %s</string>
    <string name="cardview_edit_button_content">edit event</string>
    <string name="cardview_delete_button_content">delete event</string>
    <string name="text_parent_event_create_time">create time: %s</string>
    <string name="input_parent_event_name_hint">event name</string>
    <string name="input_parent_event_content">event content</string>
    <string name="text_event_title">Event Title</string>
    <string name="text_event_description">Event Description</string>
    <string name="text_event_time_cost">1h20m</string>
    <string name="text_event_title_add">Add New Event</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_event_success">Add Event Success</string>
    <string name="event_title_is_empty_hint">Event title can\'t be empty</string>
    <string name="delete_event_dialog_title">Delete Event</string>
    <string name="delete_event_dialog_content">Are you sure to delete this event?</string>
    <string name="delete">Delete</string>
    <string name="child_fragment_title">Child Event</string>
    <string name="new_some_child_event_hint">Try to add some child event✨</string>
    <string name="text_event_created_time">Event Create time:</string>
    <string name="text_event_updated_time">Event update time:</string>
    <string name="create_time_holder">2025.03.20</string>
    <string name="update_time_holder">2025.03.20</string>
    <string name="close">Close</string>
    <string name="text_parent_event_info">Event Info</string>
    <string name="text_parent_event">Parent Event</string>
    <string name="parent_event_placeholder">Parent event name</string>
    <string name="edit_event_success">Edit event success</string>
    <string name="child_event_info_title">Child Event Info</string>
    <string name="child_event_edit_title">Edit Child Event</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="event_timer_title">Event Timer</string>
    <string name="event_name">Event Name</string>
    <string name="colon">:</string>
    <string name="zero">0</string>
    <string name="pause">Pause</string>
    <string name="exit">Exit</string>
    <string name="finish">Finish</string>
    <string name="confirm_back_title">Confirm Back?</string>
    <string name="confirm_back_message">Exit the fragment will stop the time counter</string>
    <string name="timer_is_running">Timer is running</string>
</resources>