<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="?attr/selectableItemBackground"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        >
        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_event_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_event_description"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/draggable_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/text_time_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_time_cost"
                android:maxLines="1"
                android:maxWidth="80dp"
                android:ellipsize="end"
                android:padding="6dp"
                android:background="@drawable/border"
                />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_info"
                android:layout_width="@dimen/cardview_button_size"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/cardview_button_icon_radius"
                app:icon="@android:drawable/ic_menu_info_details"
                app:iconSize="@dimen/cardview_button_icon_size"
                app:iconGravity="textStart"
                android:backgroundTint="?colorPrimary"
                android:textColor="?colorOnPrimary"
                android:gravity="center"
                app:iconPadding="0dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_edit"
                android:layout_width="@dimen/cardview_button_size"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/cardview_button_icon_radius"
                app:icon="@android:drawable/ic_menu_edit"
                app:iconSize="@dimen/cardview_button_icon_size"
                app:iconGravity="textStart"
                android:backgroundTint="?colorSecondary"
                android:textColor="?colorSecondary"
                android:gravity="center"
                app:iconPadding="0dp"
                android:layout_marginStart="6dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete"
                android:layout_width="@dimen/cardview_button_size"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/cardview_button_icon_radius"
                app:icon="@android:drawable/ic_menu_delete"
                app:iconSize="@dimen/cardview_button_icon_size"
                app:iconGravity="textStart"
                android:backgroundTint="?colorError"
                android:textColor="?colorError"
                android:gravity="center"
                app:iconPadding="0dp"
                android:layout_marginStart="6dp"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
